<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YourOwnAdventure</string>
    <string name="title_activity_main">Your Own Adventure</string>
    <string name="text_button_start">Start Traveling</string>
    <string name="action_settings">Settings</string>
    <string name="text_alley">You have ventured down a dark alley, where would you like to go next</string>
    <string name="text_room">You have entered a room with two doors</string>
    <string name="text_win">You\'ve reached the gold!</string>
    <string name="text_lost">You\'ve fallen into the pit of despair</string>
    <string name="text_img_alley">Alley Image</string>
    <string name="text_img_room">Room Image</string>
    <string name="text_img_start">Start Image</string>
    <string name="img_button_start">Start Button</string>
    <string name="img_button_left">Left Button</string>
    <string name="img_button_right">Right Button</string>
    <string name="img_button_up">Up Button</string>
    <string name="text_img_win">Win Image</string>
    <string name="text_img_lost">Lost Image</string>
    <string name="img_button_door_left">Door Left Button</string>
    <string name="img_button_door_right">Door Right Button</string>
    <string name="pref_cat_custom">Customization</string>
    <string name="user_name">Username</string>
    <string name="pref_user_summary">Username for the game</string>
    <string name="user_dif">Difficult</string>
    <string-array name="array_user_dif">
        <item>Easy</item>
        <item>Normal</item>
        <item>Hard</item>
        <item>Nightmare</item>
    </string-array>
    <string name="title_activity_preference">Preferences</string>
    <string name="action_save">Save</string>
    <string name="default_username_string">Username</string>
    <string name="default_difficult_string">Easy</string>
    <string name="winner_mes">Winner Message</string>
    <string name="looser_mes">Looser Message</string>
    <string name="message_title">Brave Fighter</string>
    <string name="text_empty" />

</resources>
